fixed return values
